# nixos-config

./: .gitignore  CHANGELOG.md  Makefile  README.md  bootstrap.sh  configuration.nix  flake.nix  hardware-configuration.nix  lsp.cabal  rebuild.sh  shell.nix  yubikey.nix
depends/: README.md
home-manager/: default.nix  kitty.nix  nvim.nix  terminal.nix  xmonad.nix
home-manager/xmonad/: bluetooth.sh  cpu_temp.sh  gpu_temp.sh  volume.sh  wifi.sh  xmobarrc  xmonad.hs
home-manager/xmonad/rofi/: colorscheme.rasi  config.rasi
hosts/bandit/: default.nix  hardware-configuration.nix
hosts/ghost/: README.md  default.nix
hosts/nixos/: default.nix
hosts/wsl/: default.nix
modules/: agenix.nix  autorandr.nix  common.nix  display-manager.nix  games.nix  ios.nix  laptop.nix  nvidia.nix  ollama.nix  printing.nix  sddm-theme.nix  sh.nix  thunar.nix  vm.nix  vpn.nix  wm.nix  yubikey.nix
modules/home/: cli.nix  cursor.nix  default.nix  fastfetch.nix  firefox.nix  games.nix  gtk.nix  hyprland.nix  kitty.nix  lockscreen.nix  nvim.nix  openscad.nix  picom.nix  programs.nix  restic.nix  sh.nix  terminal.nix
modules/home/autorandr/: default.nix
modules/home/autorandr/uplift/: config  setup
modules/home/nixvim/: auto-sessions.nix  bufferline.nix  cmp.nix  colorizer.nix  colorscheme.nix  default.nix  fidget.nix  gitsigns.nix  haskell.nix  icons.nix  keymaps.nix  lazygit.nix  lsp.nix  lualine.nix  markdown.nix  noice.nix  nvim-surround.nix  oil.nix  otter.nix  rustaceanvim.nix  smartcolumn.nix  startup.nix  telescope.nix  toggleterm.nix  treesitter.nix  trouble.nix  which-key.nix
modules/home/picom/: default.nix  pijulius.conf
modules/home/qutebrowser/: config.py  default.nix  quickmarks
modules/home/rofi/: config.rasi  default.nix
modules/home/wallpaper/: default.nix
modules/home/xmobar/: default.nix  icons.nix  keyboard_layout.sh  volume.sh  wifi.sh  xmobarrc
modules/home/xmonad/: Config.hs  Keys.hs  default.nix  hie.yaml  xmonad.cabal  xmonad.hs
modules/home/xmonad/Prompt/: Eval.hs
modules/home/xmonad/lib/: Bar.hs  Config.hs  KeyExport.hs  Keys.hs  Layouts.hs  Mouse.hs
modules/home/xmonad/lib/Prompt/: Eval.hs
