cabal-version:      3.0
name:               xmonad-lsp
version:            0.1.0.0
author:             David Sunshine
maintainer:         david@sunshines.org

executable xmonad-lsp
  main-is:          xmonad.hs
  default-extensions: ImportQualifiedPost
  build-depends:
    , base
    , xmonad
    , xmonad-contrib
    , xmobar
    , xmonad-extras
    , containers
    , hint
  ghc-options: -threaded -rtsopts -with-rtsopts=-N \
              -Wall -Weverything -Wincomplete-uni-patterns -Wincomplete-record-updates \
              -Wmonomorphism-restriction -Wimplicit-prelude -Wmissing-local-signatures \
              -Wmissing-exported-signatures -Wmissing-export-lists -Wmissing-import-lists \
              -Wmissing-home-modules -Widentities -Wredundant-constraints -Wpartial-fields \
              -Wmissed-specialisations -Wall-missed-specialisations -Wunsafe -Wsafe -Wtrustworthy-safe \
              -Wcpp-undef -Wmissing-local-signatures
  hs-source-dirs: ./modules/home/xmonad/, ./modules/home/xmonad/lib
  other-modules:   Bar, Keys, Config, Prompt.Eval
  default-language: Haskell2010
