cabal-version:      3.0
name:               xmonad-exe
version:            0.1.0.0
author:             David Sunshine
maintainer:         david@sunshines.org

executable xmonad-exe
  main-is:            xmonad.hs
  default-extensions: ImportQualifiedPost
  build-depends:
    , base
    , xmonad
    , xmonad-contrib >= 0.18.1
    , xmobar
    , xmonad-extras
    , containers
    , hint
  hs-source-dirs: ., ./lib
  other-modules: Bar, Keys, Config, Prompt.Eval
  default-language: Haskell2010
